fix overlapping buttons on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ ul.cat li {
 ol.type li {
 	display: inline-block;
 	margin-left: 20px;
+	margin-top: 25px;
 }
 ol.type li a {
 	border: 1px solid #777;
